Fix typo and coding convention

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,6 @@
       android:id="@+id/show_path"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/showPath" />
+      android:text="@string/show_path" />
   </LinearLayout>
 </android.support.constraint.ConstraintLayout>
