--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -4,7 +4,7 @@
   ~ LINE Corporation PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
   -->
 
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
@@ -14,7 +14,7 @@
   android:paddingRight="8dp"
   tools:context="com.linecorp.clay.example.LauncherActivity">
 
-  <android.support.constraint.Guideline
+  <androidx.constraintlayout.widget.Guideline
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/layout_guideline"
@@ -43,4 +43,4 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
